# datavault

./: .gitignore  LICENSE  README.md  __init__.py  datasets.py  embedding_loader.py  loaders.py  models.py  prepare_aircraft.py  pyproject.toml  registry.py  utils.py
datavault/: __init__.py  models.py  registry.py
datavault/prepare/: birdsnap.py  fer2013.py  hatefulmemes.py  ucf101.py
datavault/scripts/: download_eurosat.sh  prepare_birdsnap.py  prepare_cars.sh  prepare_fer2013.py  prepare_hatefulmemes.py  prepare_sun397.sh  prepare_ucf101.py
embedata/: embedding.py  models.py  registry.py  utils.py
embedata/prepare/: birdsnap.py  fer2013.py  hatefulmemes.py  ucf101.py
scripts/: benchmark.py  extract_and_benchmark.py  extract_imagenet.py  run_report.py  unsupervised_benchmark.py
