[project]
name = "datavault"
version = "0.1.0"
description = "Unified API for loading 28+ vision datasets with async embeddings from any PyTorch model"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0",
    "torchvision>=0.15",
    "numpy>=1.24",
    "tqdm>=4.60",
]

[project.optional-dependencies]
hf = ["datasets>=2.14"]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
packages = [{include = "datavault", from = "."}]

