[project]
name = "embedata"
version = "0.1.0"
description = "Unified API for loading 28+ vision datasets with async embeddings from any PyTorch model"
authors = [{name = "Ayoub G.", email = "dev@ayghri.me"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
keywords = ["datasets", "computer-vision", "embeddings", "pytorch", "torchvision"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Recognition"
]
dependencies = [
    "torch>=2.0",
    "torchvision>=0.15",
    "numpy>=1.24",
    "tqdm>=4.60",
]

[project.optional-dependencies]
hf = ["datasets>=2.14"]

[project.urls]
Homepage = "https://github.com/ayghri/embedata"
Repository = "https://github.com/ayghri/embedata"
Issues = "https://github.com/ayghri/embedata/issues"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [{include = "embedata", from = "."}]
